tast-tests: Use Google News instead of YouTube as a test app
- YouTube app is pre-installed on some devices. Use Google News app
  instead.

BUG=b:228643716
TEST=tast run DUT assistant.AndroidAndWeb

Change-Id: I9b3a932c21891341f058101fa193392215454650
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform/tast-tests/+/3603047
Reviewed-by: Eric Sum <esum@google.com>
Commit-Queue: Yuki Awano <yawano@google.com>
Tested-by: Yuki Awano <yawano@google.com>
Reviewed-by: Eliot Courtney <edcourtney@chromium.org>
Reviewed-by: Hiroki Sato <hirokisato@chromium.org>
Reviewed-by: Tatsuhisa Yamaguchi <yamaguchi@chromium.org>

--- a/android/AssistantAndroidAppTest/res/values/strings.xml
+++ b/android/AssistantAndroidAppTest/res/values/strings.xml
@@ -5,5 +5,5 @@
 -->
 <resources>
     <!-- DO NOT TRANSLATE -->
-    <string name="app_name">YouTube</string>
+    <string name="app_name">Google News</string>
 </resources>
